--- a/SEP1/src/ks.fxml
+++ b/SEP1/src/ks.fxml
@@ -12,6 +12,7 @@
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -121,13 +122,13 @@
                               </TextField>
                            </children>
                         </GridPane>
-                        <TableView layoutX="101.0" layoutY="233.0" prefHeight="246.0" prefWidth="800.0">
+                        <TableView layoutX="40.0" layoutY="234.0" prefHeight="246.0" prefWidth="919.0">
                           <columns>
                               <TableColumn prefWidth="200.0" text="Date and time" />
                             <TableColumn prefWidth="200.0" text="Course" />
                             <TableColumn prefWidth="200.0" text="Room" />
-                              <TableColumn prefWidth="200.0" text="Co-examiner" />
                               <TableColumn prefWidth="200.0" text="Examiner" />
+                              <TableColumn prefWidth="200.0" text="Co-examiner" />
                           </columns>
                         </TableView>
                         <Button layoutX="474.0" layoutY="139.0" mnemonicParsing="false" text="Save" />
@@ -140,7 +141,10 @@
                      <children>
                         <ScrollPane layoutX="173.0" layoutY="60.0" prefHeight="196.0" prefWidth="654.0">
                           <content>
-                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" />
+                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0">
+                                 <children>
+                                    <TextArea prefHeight="200.0" prefWidth="634.0" />
+                                 </children></AnchorPane>
                           </content>
                         </ScrollPane>
                         <Button layoutX="702.0" layoutY="260.0" mnemonicParsing="false" text="Add" />
@@ -262,13 +266,14 @@
                         <Button layoutX="86.0" layoutY="380.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="58.0" text="Update" />
                         <ScrollPane layoutX="500.0" layoutY="34.0" prefHeight="299.0" prefWidth="362.0">
                           <content>
-                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" />
+                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0">
+                                 <children>
+                                    <TextArea layoutX="-8.0" prefHeight="283.0" prefWidth="354.0" />
+                                 </children></AnchorPane>
                           </content>
                         </ScrollPane>
                         <Button layoutX="583.0" layoutY="379.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="54.0" text="Add" />
                         <Button layoutX="721.0" layoutY="379.0" mnemonicParsing="false" prefHeight="32.0" text="Remove" />
-                        <HBox layoutX="288.0" layoutY="93.0" prefHeight="38.0" prefWidth="175.0" />
-                        <HBox layoutX="295.0" layoutY="138.0" prefHeight="38.0" prefWidth="175.0" />
                      </children>
                   </AnchorPane>
                </content>
@@ -284,7 +289,7 @@
                                     <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                                  </padding>
                               </Label>
-                              <ComboBox prefHeight="28.0" prefWidth="94.0">
+                              <ComboBox fx:id="initialize" prefHeight="28.0" prefWidth="94.0">
                                  <HBox.margin>
                                     <Insets top="5.0" />
                                  </HBox.margin>
@@ -339,9 +344,12 @@
                               <CheckBox mnemonicParsing="false" text="VGA" />
                            </children>
                         </HBox>
-                        <ScrollPane layoutX="455.0" layoutY="73.0" prefHeight="246.0" prefWidth="436.0">
+                        <ScrollPane layoutX="463.0" layoutY="73.0" prefHeight="246.0" prefWidth="436.0">
                           <content>
-                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" />
+                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="244.0" prefWidth="424.0">
+                                 <children>
+                                    <TextArea layoutY="-1.0" prefHeight="246.0" prefWidth="430.0" />
+                                 </children></AnchorPane>
                           </content>
                         </ScrollPane>
                         <Button layoutX="559.0" layoutY="350.0" mnemonicParsing="false" text="Add" />
