--- a/SEP1/src/ks.fxml
+++ b/SEP1/src/ks.fxml
@@ -23,7 +23,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller">
    <children>
       <TabPane layoutY="20.0" prefHeight="580.0" prefWidth="1000.0" tabClosingPolicy="UNAVAILABLE">
         <tabs>
@@ -289,7 +289,7 @@
                                     <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                                  </padding>
                               </Label>
-                              <ComboBox fx:id="initialize" prefHeight="28.0" prefWidth="94.0">
+                              <ComboBox fx:id="roomDay" onAction="#initialize" prefHeight="28.0" prefWidth="94.0">
                                  <HBox.margin>
                                     <Insets top="5.0" />
                                  </HBox.margin>
@@ -298,14 +298,14 @@
                         </HBox>
                         <VBox layoutX="29.0" layoutY="96.0" prefHeight="200.0" prefWidth="194.0">
                            <children>
-                              <RadioButton mnemonicParsing="false" text="All rooms">
+                              <RadioButton fx:id="roomAllRooms" mnemonicParsing="false" onAction="#handleRoom" text="All rooms">
                                  <toggleGroup>
                                     <ToggleGroup fx:id="as" />
                                  </toggleGroup>
                               </RadioButton>
-                              <RadioButton mnemonicParsing="false" text="Available rooms" toggleGroup="$as" />
-                              <RadioButton mnemonicParsing="false" text="Unavailable rooms" toggleGroup="$as" />
-                              <RadioButton mnemonicParsing="false" text="Rooms for oral exams" toggleGroup="$as" />
+                              <RadioButton fx:id="roomAvailableRooms" mnemonicParsing="false" onAction="#handleRoom" text="Available rooms" toggleGroup="$as" />
+                              <RadioButton fx:id="roomUnavailableRooms" mnemonicParsing="false" onAction="#handleRoom" text="Unavailable rooms" toggleGroup="$as" />
+                              <RadioButton fx:id="roomOralRooms" mnemonicParsing="false" onAction="#handleRoom" text="Rooms for oral exams" toggleGroup="$as" />
                            </children>
                         </VBox>
                         <GridPane layoutX="26.0" layoutY="275.0">
@@ -322,25 +322,25 @@
                               <Label text="Room size:" />
                               <Label text="Room number:" GridPane.rowIndex="1" />
                               <Label text="Availability:" GridPane.rowIndex="2" />
-                              <TextField GridPane.columnIndex="1" />
-                              <TextField GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                              <ComboBox prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                              <TextField fx:id="roomRoomSize" GridPane.columnIndex="1" />
+                              <TextField fx:id="roomRoomNumber" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                              <ComboBox fx:id="roomAvailability" onAction="#initialize" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                            </children>
                         </GridPane>
-                        <Button layoutX="96.0" layoutY="432.0" mnemonicParsing="false" text="Update" />
+                        <Button fx:id="roomUpdate" layoutX="96.0" layoutY="432.0" mnemonicParsing="false" text="Update" />
                         <HBox layoutX="18.0" layoutY="380.0" prefHeight="34.0" prefWidth="214.0">
                            <children>
-                              <CheckBox mnemonicParsing="false" text="Projector">
+                              <CheckBox fx:id="roomProjector" mnemonicParsing="false" text="Projector">
                                  <HBox.margin>
                                     <Insets right="5.0" />
                                  </HBox.margin>
                               </CheckBox>
-                              <CheckBox mnemonicParsing="false" text="HDMI">
+                              <CheckBox fx:id="roomHDMI" mnemonicParsing="false" text="HDMI">
                                  <HBox.margin>
                                     <Insets right="5.0" />
                                  </HBox.margin>
                               </CheckBox>
-                              <CheckBox mnemonicParsing="false" text="VGA" />
+                              <CheckBox fx:id="roomVGA" mnemonicParsing="false" text="VGA" />
                            </children>
                         </HBox>
                         <ScrollPane layoutX="463.0" layoutY="73.0" prefHeight="246.0" prefWidth="436.0">
@@ -351,7 +351,7 @@
                                  </children></AnchorPane>
                           </content>
                         </ScrollPane>
-                        <Button layoutX="559.0" layoutY="350.0" mnemonicParsing="false" text="Add" />
+                        <Button fx:id="roomAdd" layoutX="559.0" layoutY="350.0" mnemonicParsing="false" onAction="#handleRoom" text="Add" />
                         <Button layoutX="721.0" layoutY="350.0" mnemonicParsing="false" text="Remove" />
                      </children></AnchorPane>
                </content>
