--- a/SEP1/src/ks.fxml
+++ b/SEP1/src/ks.fxml
@@ -6,13 +6,10 @@
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.RadioButton?>
-<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -65,17 +62,17 @@
                                     <Insets left="45.0" />
                                  </GridPane.margin>
                               </Label>
-                              <ComboBox prefWidth="140.0" GridPane.rowIndex="1">
+                              <ComboBox fx:id="examDate" prefWidth="140.0" GridPane.rowIndex="1">
                                  <GridPane.margin>
                                     <Insets />
                                  </GridPane.margin>
                               </ComboBox>
-                              <ComboBox prefWidth="140.0" GridPane.columnIndex="2" GridPane.rowIndex="1">
+                              <ComboBox fx:id="examCourse" prefWidth="140.0" GridPane.columnIndex="2" GridPane.rowIndex="1">
                                  <GridPane.margin>
                                     <Insets />
                                  </GridPane.margin>
                               </ComboBox>
-                              <ComboBox prefWidth="140.0" GridPane.columnIndex="3" GridPane.rowIndex="1">
+                              <ComboBox fx:id="examRoom" prefWidth="140.0" GridPane.columnIndex="3" GridPane.rowIndex="1">
                                  <GridPane.margin>
                                     <Insets />
                                  </GridPane.margin>
@@ -92,7 +89,7 @@
                                           <Insets top="5.0" />
                                        </padding>
                                     </Label>
-                                    <TextField prefWidth="120.0">
+                                    <TextField fx:id="examFrom" prefWidth="120.0">
                                        <HBox.margin>
                                           <Insets right="10.0" />
                                        </HBox.margin>
@@ -102,36 +99,48 @@
                                           <Insets left="18.0" top="5.0" />
                                        </padding>
                                     </Label>
-                                    <TextField prefWidth="120.0">
+                                    <TextField fx:id="examTo" prefWidth="120.0">
                                        <HBox.margin>
                                           <Insets right="10.0" />
                                        </HBox.margin>
                                     </TextField>
                                  </children>
                               </HBox>
-                              <ComboBox prefWidth="140.0" GridPane.columnIndex="4" GridPane.rowIndex="1" />
+                              <ComboBox fx:id="examExaminer" prefWidth="140.0" GridPane.columnIndex="4" GridPane.rowIndex="1" />
                               <Label text="Co-examiner" GridPane.columnIndex="5">
                                  <GridPane.margin>
                                     <Insets left="20.0" />
                                  </GridPane.margin>
                               </Label>
-                              <TextField GridPane.columnIndex="5" GridPane.rowIndex="1">
+                              <TextField fx:id="examCoExaminer" GridPane.columnIndex="5" GridPane.rowIndex="1">
                                  <GridPane.margin>
                                     <Insets left="5.0" />
                                  </GridPane.margin>
                               </TextField>
                            </children>
                         </GridPane>
-                        <TableView layoutX="40.0" layoutY="234.0" prefHeight="246.0" prefWidth="919.0">
-                          <columns>
-                              <TableColumn prefWidth="200.0" text="Date and time" />
-                            <TableColumn prefWidth="200.0" text="Course" />
-                            <TableColumn prefWidth="200.0" text="Room" />
-                              <TableColumn prefWidth="200.0" text="Examiner" />
-                              <TableColumn prefWidth="200.0" text="Co-examiner" />
-                          </columns>
-                        </TableView>
-                        <Button layoutX="474.0" layoutY="139.0" mnemonicParsing="false" text="Save" />
+                        <Button fx:id="examSave" layoutX="384.0" layoutY="139.0" mnemonicParsing="false" text="Save" />
+                        <GridPane layoutX="73.0" layoutY="185.0" prefHeight="30.0" prefWidth="890.0">
+                          <columnConstraints>
+                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                          </columnConstraints>
+                          <rowConstraints>
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                          </rowConstraints>
+                           <children>
+                              <Label text="Date and time" />
+                              <Label text="Course" GridPane.columnIndex="1" />
+                              <Label text="Room" GridPane.columnIndex="2" />
+                              <Label text="Examiner" GridPane.columnIndex="3" />
+                              <Label text="Co-examiner" GridPane.columnIndex="4" />
+                           </children>
+                        </GridPane>
+                        <ListView fx:id="examList" layoutX="49.0" layoutY="221.0" prefHeight="282.0" prefWidth="890.0" />
+                        <Button fx:id="examRemove" layoutX="500.0" layoutY="139.0" mnemonicParsing="false" text="Remove" />
                      </children></AnchorPane>
               </content>
             </Tab>
@@ -139,37 +148,44 @@
               <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="600.0" prefWidth="300.0">
                      <children>
-                        <ScrollPane layoutX="173.0" layoutY="60.0" prefHeight="196.0" prefWidth="654.0">
-                          <content>
-                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0">
-                                 <children>
-                                    <TextArea prefHeight="200.0" prefWidth="634.0" />
-                                 </children></AnchorPane>
-                          </content>
-                        </ScrollPane>
-                        <Button layoutX="702.0" layoutY="260.0" mnemonicParsing="false" text="Add" />
-                        <Button layoutX="763.0" layoutY="260.0" mnemonicParsing="false" text="Remove" />
-                        <HBox layoutX="172.0" layoutY="341.0" prefHeight="37.0" prefWidth="259.0">
+                        <Button fx:id="courseAdd" layoutX="702.0" layoutY="260.0" mnemonicParsing="false" onAction="#handleCourse" text="Add" />
+                        <Button fx:id="courseRemove" layoutX="763.0" layoutY="260.0" mnemonicParsing="false" onAction="#handleCourse" text="Remove" />
+                        <HBox layoutX="80.0" layoutY="339.0" prefHeight="40.0" prefWidth="260.0">
                            <children>
                               <Label prefHeight="18.0" prefWidth="91.0" text="Course name:">
                                  <HBox.margin>
                                     <Insets top="5.0" />
                                  </HBox.margin>
                               </Label>
-                              <TextField />
+                              <TextField fx:id="courseName" />
                            </children>
                         </HBox>
-                        <HBox layoutX="611.0" layoutY="341.0" prefHeight="34.0" prefWidth="218.0">
+                        <HBox layoutX="612.0" layoutY="339.0" prefHeight="34.0" prefWidth="218.0">
                            <children>
                               <Label prefHeight="18.0" prefWidth="66.0" text="Exam info:">
                                  <HBox.margin>
                                     <Insets top="5.0" />
                                  </HBox.margin>
                               </Label>
-                              <ComboBox prefWidth="150.0" />
+                              <ComboBox fx:id="courseExamInfo" prefWidth="150.0" />
                            </children>
                         </HBox>
-                        <Button layoutX="474.0" layoutY="420.0" mnemonicParsing="false" text="Update" />
+                        <Button fx:id="courseUpdate" layoutX="474.0" layoutY="420.0" mnemonicParsing="false" onAction="#handleCourse" text="Update" />
+                        <HBox layoutX="344.0" layoutY="339.0" prefHeight="40.0" prefWidth="226.0">
+                           <children>
+                              <Label prefHeight="18.0" prefWidth="178.0" text="Number of Students:">
+                                 <HBox.margin>
+                                    <Insets top="5.0" />
+                                 </HBox.margin>
+                              </Label>
+                              <TextField fx:id="courseNumberOfStudents" prefHeight="26.0" prefWidth="166.0">
+                                 <HBox.margin>
+                                    <Insets right="5.0" />
+                                 </HBox.margin>
+                              </TextField>
+                           </children>
+                        </HBox>
+                        <ListView fx:id="courseList" layoutX="218.0" layoutY="40.0" prefHeight="200.0" prefWidth="563.0" />
                      </children></AnchorPane>
               </content>
             </Tab>
@@ -179,13 +195,13 @@
                      <children>
                         <VBox layoutX="28.0" layoutY="87.0" prefHeight="90.0" prefWidth="231.0">
                            <children>
-                              <RadioButton mnemonicParsing="false" text="All examiners">
+                              <RadioButton fx:id="examinerAllExaminers" mnemonicParsing="false" text="All examiners">
                                  <toggleGroup>
                                     <ToggleGroup fx:id="ks" />
                                  </toggleGroup>
                               </RadioButton>
-                              <RadioButton mnemonicParsing="false" text="Available examiners" toggleGroup="$ks" />
-                              <RadioButton mnemonicParsing="false" text="Unavailable examiners" toggleGroup="$ks">
+                              <RadioButton fx:id="examinerAvailableExaminers" mnemonicParsing="false" text="Available examiners" toggleGroup="$ks" />
+                              <RadioButton fx:id="examinerUnavailableExaminers" mnemonicParsing="false" text="Unavailable examiners" toggleGroup="$ks">
                                  <cursor>
                                     <Cursor fx:constant="SW_RESIZE" />
                                  </cursor>
@@ -199,7 +215,7 @@
                                     <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                                  </padding>
                               </Label>
-                              <ComboBox prefHeight="28.0" prefWidth="188.0">
+                              <ComboBox fx:id="examinerDay" prefHeight="28.0" prefWidth="188.0">
                                  <HBox.margin>
                                     <Insets top="5.0" />
                                  </HBox.margin>
@@ -241,39 +257,32 @@
                                     <Insets top="5.0" />
                                  </GridPane.margin>
                               </Label>
-                              <TextField maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="150.0" GridPane.columnIndex="1">
+                              <TextField fx:id="examinerName" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="150.0" GridPane.columnIndex="1">
                                  <GridPane.margin>
                                     <Insets />
                                  </GridPane.margin>
                               </TextField>
-                              <TextField maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="27.0" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                              <TextField fx:id="examinerID" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="27.0" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
                                  <GridPane.margin>
                                     <Insets />
                                  </GridPane.margin>
                               </TextField>
-                              <ComboBox prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                              <ComboBox fx:id="examinerCourse" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
                                  <GridPane.margin>
                                     <Insets />
                                  </GridPane.margin>
                               </ComboBox>
-                              <ComboBox prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
+                              <ComboBox fx:id="examinerAvailability" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
                                  <GridPane.margin>
                                     <Insets top="10.0" />
                                  </GridPane.margin>
                               </ComboBox>
                            </children>
                         </GridPane>
-                        <Button layoutX="86.0" layoutY="380.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="58.0" text="Update" />
-                        <ScrollPane layoutX="500.0" layoutY="34.0" prefHeight="299.0" prefWidth="362.0">
-                          <content>
-                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0">
-                                 <children>
-                                    <TextArea layoutX="-8.0" prefHeight="283.0" prefWidth="354.0" />
-                                 </children></AnchorPane>
-                          </content>
-                        </ScrollPane>
-                        <Button layoutX="583.0" layoutY="379.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="54.0" text="Add" />
-                        <Button layoutX="721.0" layoutY="379.0" mnemonicParsing="false" prefHeight="32.0" text="Remove" />
+                        <Button fx:id="examinerUpdate" layoutX="86.0" layoutY="380.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="58.0" text="Update" />
+                        <Button fx:id="examinerAdd" layoutX="583.0" layoutY="379.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="54.0" text="Add" />
+                        <Button fx:id="examinerRemove" layoutX="721.0" layoutY="379.0" mnemonicParsing="false" prefHeight="32.0" text="Remove" />
+                        <ListView fx:id="examinerList" layoutX="460.0" layoutY="49.0" prefHeight="307.0" prefWidth="458.0" />
                      </children>
                   </AnchorPane>
                </content>
@@ -289,7 +298,7 @@
                                     <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                                  </padding>
                               </Label>
-                              <ComboBox fx:id="roomDay" onAction="#initialize" prefHeight="28.0" prefWidth="94.0">
+                              <ComboBox fx:id="roomDay" prefHeight="28.0" prefWidth="94.0">
                                  <HBox.margin>
                                     <Insets top="5.0" />
                                  </HBox.margin>
@@ -324,7 +333,7 @@
                               <Label text="Availability:" GridPane.rowIndex="2" />
                               <TextField fx:id="roomRoomSize" GridPane.columnIndex="1" />
                               <TextField fx:id="roomRoomNumber" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                              <ComboBox fx:id="roomAvailability" onAction="#initialize" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                              <ComboBox fx:id="roomAvailability" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                            </children>
                         </GridPane>
                         <Button fx:id="roomUpdate" layoutX="96.0" layoutY="432.0" mnemonicParsing="false" text="Update" />
@@ -343,16 +352,9 @@
                               <CheckBox fx:id="roomVGA" mnemonicParsing="false" text="VGA" />
                            </children>
                         </HBox>
-                        <ScrollPane layoutX="463.0" layoutY="73.0" prefHeight="246.0" prefWidth="436.0">
-                          <content>
-                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="244.0" prefWidth="424.0">
-                                 <children>
-                                    <TextArea layoutY="-1.0" prefHeight="246.0" prefWidth="430.0" />
-                                 </children></AnchorPane>
-                          </content>
-                        </ScrollPane>
                         <Button fx:id="roomAdd" layoutX="559.0" layoutY="350.0" mnemonicParsing="false" onAction="#handleRoom" text="Add" />
-                        <Button layoutX="721.0" layoutY="350.0" mnemonicParsing="false" text="Remove" />
+                        <Button fx:id="roomRemove" layoutX="721.0" layoutY="350.0" mnemonicParsing="false" text="Remove" />
+                        <ListView fx:id="roomList" layoutX="472.0" layoutY="37.0" prefHeight="286.0" prefWidth="418.0" />
                      </children></AnchorPane>
                </content>
             </Tab>
