--- a/SEP1/src/ks.fxml
+++ b/SEP1/src/ks.fxml
@@ -28,14 +28,14 @@
               <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
-                        <GridPane layoutX="26.0" layoutY="49.0" prefWidth="950.0">
+                        <GridPane layoutX="19.0" layoutY="52.0" prefWidth="950.0">
                           <columnConstraints>
-                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="150.0" />
-                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="350.0" />
-                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="150.0" />
-                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="150.0" />
-                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="150.0" />
-                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="150.0" />
+                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="80.0" />
+                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="300.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="170.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="170.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="170.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="170.0" />
                           </columnConstraints>
                           <rowConstraints>
                             <RowConstraints maxHeight="30.4" minHeight="10.0" prefHeight="30.4" vgrow="SOMETIMES" />
@@ -44,42 +44,42 @@
                            <children>
                               <Label text="Date">
                                  <GridPane.margin>
-                                    <Insets left="50.0" />
+                                    <Insets left="15.0" />
                                  </GridPane.margin>
                               </Label>
                               <Label text="Duration" GridPane.columnIndex="1">
                                  <GridPane.margin>
-                                    <Insets left="150.0" />
+                                    <Insets left="135.0" />
                                  </GridPane.margin>
                               </Label>
                               <Label text="Course" GridPane.columnIndex="2">
                                  <GridPane.margin>
-                                    <Insets left="45.0" />
+                                    <Insets left="50.0" />
                                  </GridPane.margin>
                               </Label>
                               <Label text="Room" GridPane.columnIndex="3">
                                  <GridPane.margin>
-                                    <Insets left="45.0" />
+                                    <Insets left="55.0" />
                                  </GridPane.margin>
                               </Label>
                               <ComboBox fx:id="examDate" prefWidth="140.0" GridPane.rowIndex="1">
                                  <GridPane.margin>
-                                    <Insets />
+                                    <Insets right="5.0" />
                                  </GridPane.margin>
                               </ComboBox>
                               <ComboBox fx:id="examCourse" prefWidth="140.0" GridPane.columnIndex="2" GridPane.rowIndex="1">
                                  <GridPane.margin>
-                                    <Insets />
+                                    <Insets left="5.0" />
                                  </GridPane.margin>
                               </ComboBox>
                               <ComboBox fx:id="examRoom" prefWidth="140.0" GridPane.columnIndex="3" GridPane.rowIndex="1">
                                  <GridPane.margin>
-                                    <Insets />
+                                    <Insets left="5.0" />
                                  </GridPane.margin>
                               </ComboBox>
                               <Label text="Examiner" GridPane.columnIndex="4">
                                  <GridPane.margin>
-                                    <Insets left="35.0" />
+                                    <Insets left="50.0" />
                                  </GridPane.margin>
                               </Label>
                               <HBox prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
@@ -88,28 +88,34 @@
                                        <padding>
                                           <Insets top="5.0" />
                                        </padding>
+                                       <HBox.margin>
+                                          <Insets left="5.0" />
+                                       </HBox.margin>
                                     </Label>
-                                    <TextField fx:id="examFrom" prefWidth="120.0">
+                                    <TextField fx:id="examFrom" prefWidth="100.0">
                                        <HBox.margin>
                                           <Insets right="10.0" />
                                        </HBox.margin>
                                     </TextField>
-                                    <Label prefWidth="50.0" text="To:">
+                                    <Label prefWidth="35.0" text="To:">
                                        <padding>
-                                          <Insets left="18.0" top="5.0" />
+                                          <Insets top="5.0" />
                                        </padding>
                                     </Label>
-                                    <TextField fx:id="examTo" prefWidth="120.0">
+                                    <TextField fx:id="examTo" prefWidth="100.0">
                                        <HBox.margin>
                                           <Insets right="10.0" />
                                        </HBox.margin>
                                     </TextField>
                                  </children>
                               </HBox>
-                              <ComboBox fx:id="examExaminer" prefWidth="140.0" GridPane.columnIndex="4" GridPane.rowIndex="1" />
+                              <ComboBox fx:id="examExaminer" prefWidth="140.0" GridPane.columnIndex="4" GridPane.rowIndex="1">
+                                 <GridPane.margin>
+                                    <Insets left="5.0" />
+                                 </GridPane.margin></ComboBox>
                               <Label text="Co-examiner" GridPane.columnIndex="5">
                                  <GridPane.margin>
-                                    <Insets left="20.0" />
+                                    <Insets left="40.0" />
                                  </GridPane.margin>
                               </Label>
                               <TextField fx:id="examCoExaminer" GridPane.columnIndex="5" GridPane.rowIndex="1">
@@ -119,7 +125,7 @@
                               </TextField>
                            </children>
                         </GridPane>
-                        <Button fx:id="examSave" layoutX="384.0" layoutY="139.0" mnemonicParsing="false" text="Save" />
+                        <Button fx:id="examSave" layoutX="384.0" layoutY="139.0" mnemonicParsing="false" onAction="#handleExam" text="Save" />
                         <GridPane layoutX="73.0" layoutY="185.0" prefHeight="30.0" prefWidth="890.0">
                           <columnConstraints>
                             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -140,7 +146,7 @@
                            </children>
                         </GridPane>
                         <ListView fx:id="examList" layoutX="49.0" layoutY="221.0" prefHeight="282.0" prefWidth="890.0" />
-                        <Button fx:id="examRemove" layoutX="500.0" layoutY="139.0" mnemonicParsing="false" text="Remove" />
+                        <Button fx:id="examRemove" layoutX="500.0" layoutY="139.0" mnemonicParsing="false" onAction="#handleExam" text="Remove" />
                      </children></AnchorPane>
               </content>
             </Tab>
